feature - criado telas e home e adicionar gasto.

--- a/app/login/login.html
+++ b/app/login/login.html
@@ -55,6 +55,12 @@
                     Entrar
                 </button>
 
+                <div class="guest-access">
+                    <button type="button" class="btn-guest" onclick="window.location.href='/app/home/home.html'">
+                        Usar sem login
+                    </button>
+                </div>
+
                 <div class="create-account">
                     <a href="/app/register/register.html" class="create-link">Criar nova conta</a>
                 </div>
